--- a/midocker/Dockerfile
+++ b/midocker/Dockerfile
@@ -1,8 +1,14 @@
 FROM python
 
 WORKDIR /app
-COPY script1_v2.py /app/
+
+COPY script1_v3.py /app/
 COPY requirements.txt /app/
 
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["python", "./script1_v2.py"]
+
+RUN chmod +x /app/script1_v3.py
+
+# Ejecutar el script cuando el contenedor se inicie
+ENTRYPOINT ["python", "script1_v3.py"]
+
