--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -1,14 +1,13 @@
 name: CI/CD Docker Pipeline
 
-# Ejecuta el workflow en cada push a la rama main
 on:
   push:
     branches:
       - main
 
 jobs:
-  build-and-push:
-    name: Build and Push Docker Image
+  update-docker-image:
+    name: Update Docker Image
     runs-on: ubuntu-latest
 
     steps:
@@ -20,31 +19,11 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: mateorzan
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 3. Construye y etiqueta la imagen de Docker
-      - name: Build and tag Docker image
+      # 3. Construye y sube la imagen de Docker
+      - name: Build and Push Docker Image
         run: |
-          docker build -t mateorzan/midocker_mateo:latest .
-
-      # 4. Sube la imagen al Docker Hub
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker push mateorzan/midocker_mateo:latest
-
-  deploy:
-    name: Deploy to Server
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    steps:
-      # 1. Configura la clave SSH
-      - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.8.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      # 2. Despliega la nueva imagen en el servidor remoto
-      - name: Deploy Docker Image
-        run: |
-          ssh -o StrictHostKeyChecking=no user@server_ip "docker pull mateorzan/midocker_mateo:latest && docker stop my-app || true && docker rm my-app || true && docker run -d --name my-app -p 80:80 mateorzan/midocker_mateo:latest"
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/midocker_mateo:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/midocker_mateo:latest
